hashserver_ms/manifests_google/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-file-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-file-lb-svc
            port:
              number: 80
